--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 .App-header {
-  background-color: #222;
+  background: linear-gradient(black, orange);
   height: 150px;
   padding: 20px;
   color: white;
